<resources>
    <string name="app_name">DropPickHire</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or">|</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_failed">Sign In Failed. Please try again</string>
    <string name="signed_out">Signed Out successfully</string>
    <string name="network_problem">Something went wrong, could you please try again!</string>
    <string name="sign_up_failed">There was a problem creating an account, could you please try again!</string>
    <string name="recruiter">Recruiter</string>
    <string name="job_seeker">Job Seeker</string>
    <string name="sign_in_success">Signed In successfully</string>
    <string name="user_exists">A user already exists with that username, please chose a new username</string>
    <string name="sign_up_success">Created a new account successfully</string>
    <string name="start_finding_place">Start finding a place</string>
    <string name="title_activity_maps">Map</string>
    <string name="pick_location">Pick a loction</string>
    <string name="event_name">Event Name</string>
    <string name="select_date">Select a date</string>
    <string name="pick_time">Select a time</string>
    <string name="submit">Create Event</string>
    <string name="failed_to_get_location">Failed to get location. Please try again</string>
    <string name="enter_date_time">Please select date and time for the event</string>
    <string name="select_location">Please pick a location for the event</string>
    <string name="enter_title">Please enter an event title</string>
    <string name="no_account_found">No account found for the given details. Please try again</string>
    <string name="majors">Majors Allowed</string>
    <string name="skills">Skills Required</string>
    <string name="experience">Experience Required</string>
    <string name="degree">Select Degree</string>
    <string name="select_degree">Select a degree from the dropdown</string>
    <string name="select_major">Please select a major from the dropdown</string>
    <string name="select_skills">Please seleck skills from the dropdown</string>
    <string name="upload_resume">Upload Resume</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="major">Major</string>
    <string name="enter_fn_ln">Please enter both first name and last name</string>
    <string name="select_experience">Please select experience from the dropdown</string>
    <string name="select_experience_one">Select atmost one option from experience dropdown</string>
    <string name="select_major_one">Please select atmost one major from the dropdown</string>
    <string name="select_degree_one">Please select atmost one degree from the dropdown</string>
    <string name="invalid_file">We couldn\'t get any data from the file, please try uploading a new file</string>
    <string name="profile_updated">Profile has been updated successfully</string>
    <string name="logout">Logout</string>
    <string name="profile_incomplete">Your profile seems to be incomplete, please complete your profile to quickly apply</string>
    <string name="cancel">Cancel</string>
    <string name="submit_application">Submit</string>
    <string name="submit_profile">Upload Profile</string>
    <string name="submitted">Successfully submitted your profile for the event.</string>
    <string name="events">Events</string>
    <string name="create_event">Create Event</string>
    <string name="update_profile">Update Profile</string>
    <string name="submissions">Submissions</string>
    <string name="no_submissions">No Submissions found for the event</string>
</resources>
